--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
           all-in-one app designed to elevate your academic journey. Whether you're in school, college, or pursuing your
           bachelor's degree, NI Tutor is here to make studying efficient, engaging, and effective.</p>
         <div class="flex justify-center">
-          <button href="" download=""
-            class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Desktop
+          <button onclick= window.location.href="./files/setup.exe" download class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded text-lg">Desktop
             App</button>
           <button onclick="window.location.href='https://play.google.com/store/apps/details?id=com.nparchives';"
             class="ml-4 inline-flex text-gray-700 bg-gray-100 border-0 py-2 px-6 focus:outline-none hover:bg-gray-200 rounded text-lg">Android
